<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/widget_activity_error_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/null_user"
        android:textSize="18sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/widget_activity_non_null_user_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/configure" />

        <RadioGroup
            android:id="@+id/widget_activity_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radio_events"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_label" />

            <RadioButton
                android:id="@+id/radio_places"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/places_label" />

        </RadioGroup>

        <TextView
            android:id="@+id/widget_activity_category_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/category"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/widget_activity_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone" />


    </LinearLayout>

    <Button
        android:id="@+id/add_widget_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:text="@string/add_widget"
        android:visibility="gone" />

</LinearLayout>