<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="@dimen/widget_margin">

    <LinearLayout
        android:id="@+id/appwidget_title_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/appwidget_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/appwidget_text"
            android:text="@string/appwidget_text"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/appwidget_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Music"
            android:textColor="#ffffff"
            android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/appwidget_list_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/appwidget_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/appwidget_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/appwidget_error_ll"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appwidget_error_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/no_internet_text"
            android:textSize="18sp" />

        <Button
            android:id="@+id/appwidget_retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:text="@string/retry_button"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</LinearLayout>